<resources>
    <string name="app_name">산담소</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_page_tv_detail_view">상세 보기</string>
    <string name="info_page_tv_location_view">위치 보기</string>
    <string name="info_page_tv_intro_view">산 소개</string>
    <string name="my_page_tv_info_edit_view">개인 정보 수정</string>
    <string name="my_page_tv_nickname_view">닉네임 수정하러 가기</string>
    <string name="my_page_tv_name_view">이 름</string>
    <string name="my_page_tv_social_view">인증된 소셜 계정</string>
    <string name="my_page_tv_theme_view">테마 변경</string>
    <string name="my_page_tv_mode_view">라이트모드 / 다크모드</string>
    <string name="my_page_tv_btn_logout">로그아웃</string>
    <string name="my_page_tv_btn_secession">회원 탈퇴</string>
    <string name="echo">Echo</string>
    <string name="chat">Chat</string>
    <string name="search">Search</string>
    <string name="my_page">MyPage</string>
    <string name="search_page_btn_mnt">산 이름으로 검색</string>
    <string name="search_page_btn_goo">지역명으로 검색</string>
    <string name="search_page_et_hint">검색어를 입력해주세요.</string>
    <string name="search_page_spinner_sido">도시 선택</string>
    <string name="search_page_spinner_goo">지역 선택</string>
    <string name="search_page_item_tv">산이름</string>
    <string name="signin_tv_auto_login">자동로그인</string>
    <string name="signin_tv_save_mail">이메일저장</string>
    <string name="next">다음</string>
    <string name="skip">건너띄기</string>
    <string name="start">시작</string>
    <string name="firebase_web_client_id">797720929790-2og2l3aaka8efbchrsikabn4hlsja82c.apps.googleusercontent.com</string>
    <string-array name="sido">
        <item>서울특별시</item>
        <item>대전광역시</item>
        <item>대구광역시</item>
        <item>부산광역시</item>
        <item>인천광역시</item>
        <item>광주광역시</item>
        <item>울산광역시</item>
        <item>경기도</item>
        <item>강원도</item>
        <item>경상남도</item>
        <item>경상북도</item>
        <item>충청남도</item>
        <item>충청북도</item>
        <item>전라남도</item>
        <item>전라북도</item>
        <item>제주도</item>
    </string-array>
    <string-array name="sort">
        <item>최신순</item>
        <item>인기순</item>
        <item>마감일 순</item>
        <item>내 글 순</item>
    </string-array>
    <string name="test_text">설악산은 한라산(1,947.3m),지리산(1,915.4m)에 이어 남한에서 세 번째로 높은 산으로 강원도 속초시와 양양군,인제군에 걸쳐 있다.옛 문헌을 보면 지금의 대청봉이 있는 양양, 속초의 산만을 `설악\'이라 제한하였고 귀때기청봉이 있는 인제쪽의 산을 `한계산\'이라 따로 지칭했다. 그 예로 안산 남쪽 장수대 부근에 있는 한계산성이 이를 뒷받침하고 있다. 진부령에서 대청봉까지 이어지는 북주능의 백미는 뭐니뭐니 해도 수많은 암봉들로 구성된 공룡능선인데 이 코스가 바로 북주능의 등뼈 역할을 하는 공룡능선을 가장 짧은 시간에 주파할 수 있는 길이다. 이 능선은 1963년 겨울, 당시 한국의 암벽등반 선구자이던 선우증옥, 정규현, 채태웅씨 등이 처음으로 완등한 이후 산악인들로부터 각광을 받다가 최근엔 일반인들도 쉽게 할 수 있을 만큼 등산로가 잘 닦여있다. </string>
    <string name="nickname_tv_title">닉네임 바꾸기</string>
</resources>