<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".InfoPage.InfoPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/info_page_btn_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/info_page_tv_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/info_page_tv_detail_view"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/info_page_btn_back_arrow"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/info_page_linear_layout_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/info_page_btn_back_arrow"
            app:layout_constraintTop_toBottomOf="@+id/info_page_btn_back_arrow">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/info_page_iv_mountain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_launcher_background" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/info_page_tv_mountain_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="설악산"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/info_page_tv_mountain_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="강원도 속초시 양양군 인제군 고성군" />

                <TextView
                    android:id="@+id/info_page_tv_mountain_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="해발고도 : 1915m"
                    android:textSize="13sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/info_page_view1"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginHorizontal="3dp"
            android:layout_marginTop="15dp"
            android:background="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_page_linear_layout_info" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/info_page_rv_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/info_page_linear_layout_info2"
            app:layout_constraintEnd_toEndOf="@+id/info_page_view1"
            app:layout_constraintStart_toStartOf="@+id/info_page_view1"
            app:layout_constraintTop_toBottomOf="@+id/info_page_view1"
            tools:itemCount="7"
            tools:listitem="@layout/weather_item" />

        <LinearLayout
            android:id="@+id/info_page_linear_layout_info2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/info_page_linear_layout_info"
            app:layout_constraintStart_toStartOf="@+id/info_page_linear_layout_info"
            app:layout_constraintTop_toBottomOf="@+id/info_page_rv_weather">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="3dp"
                android:layout_marginTop="5dp"
                android:background="@color/light_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:text="@string/info_page_tv_location_view"
                android:textSize="17sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/info_page_iv_map"
                    android:layout_width="330dp"
                    android:layout_height="330dp"
                    android:src="@drawable/ic_launcher_background" />

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="3dp"
                android:layout_marginTop="15dp"
                android:background="@color/light_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:text="@string/info_page_tv_intro_view"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_page_tv_mountain_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="높이는 1,708.1m이다. 남한에서는 한라산 지리산에 이어 세 번째로 높은 산이며, '제 2의 금강산' 이라고 불린다." />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>